Ritm creation and code cleanup